trying to fix duplicates in multipaths #14